--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "calendar-app",
-  "homepage": "https://Aaditya2025.github.io/Calendar-App",
+  "homepage": "https://Aaditya2025.github.io/CALENDAR-APP",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://Aaditya2025.github.io/your-repo-name",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
