--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "calendar-app",
-  "homepage": "https://Aaditya2025.github.io/CALENDAR-APP",
+  "homepage": "https://Aaditya2025.github.io/Calendar-App",
   "private": true,
   "version": "0.0.0",
   "type": "module",
